Fixed Chart h2 alignment

--- a/public/main.css
+++ b/public/main.css
@@ -100,6 +100,7 @@ main article {
     max-width: 340px;
     text-align: justify;
     margin: 20px;
+    vertical-align: top;
 }
 
 @media screen and (min-width: 768px) {
